test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/ns-selector-with-wildcard-kind/pod-fail.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx-block
  namespace: test-wildcard
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: nginx
    name: test
