test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/ns-selector-with-wildcard-kind/pod-pass.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: nginx-pass
  namespace: default
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: nginx
    name: test
