test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/ns-selector-with-wildcard-kind/02-ns.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: ns
spec:
  timeouts: {}
  try:
  - apply:
      file: ns.yaml
  - assert:
      file: ns.yaml
