test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/ns-selector-with-wildcard-kind/03-pod-fail.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: pod-fail
spec:
  timeouts: {}
  try:
  - apply:
      check:
        ($error != null): true
      file: pod-fail.yaml
  - apply:
      file: pod-pass.yaml
